--- a/css/shortcodes.css
+++ b/css/shortcodes.css
@@ -3033,7 +3033,7 @@ a.sc_icon:hover {
 
 
 .sc_parallax_bg {
-    background-image: url(../images/2000x1200.jpg);
+    background-image: url(../images/parallax.jpg);
     background-position: 50% 50%;
 }
 /*= List ==============================================================================================================*/
